--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,9 +1,34 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.5.4'
-    id 'io.spring.dependency-management' version '1.1.7'
+    id 'org.springframework.boot' version '3.2.0'
+    id 'io.spring.dependency-management' version '1.1.0'
+    id 'com.google.protobuf' version "0.9.4"
 }
+
+def grpcVersion = '1.54.0'
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation ('net.devh:grpc-server-spring-boot-starter:2.15.0.RELEASE')
+    implementation "com.google.protobuf:protobuf-java:3.25.3"
+    implementation "io.grpc:grpc-protobuf:${grpcVersion}"
+    implementation "io.grpc:grpc-stub:${grpcVersion}"
+    implementation "io.grpc:grpc-core:${grpcVersion}"
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+}
+
+protobuf {
+    protoc {
+        artifact = "com.google.protobuf:protoc:3.25.3"
+    }
+    plugins {
+        grpc {
+            artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
+        }
+    }
+    generateProtoTasks {
+        all()*.plugins {
+            grpc {}
+        }
+    }
 }
